Remove position: fixed and overflow

--- a/material-number-select.css
+++ b/material-number-select.css
@@ -1,4 +1,8 @@
-/* Material Number Select -- v0.3.0 -- https://github.com/jsejcksn/material-number-select/ */
+/* Material Number Select -- v0.3.1 -- https://github.com/jsejcksn/material-number-select/ */
+
+body {
+  height: 100%;
+}
 
 .no-scroll {
   height: 0;
@@ -10,12 +14,8 @@
   background-color: #efefef;
   height: 100%;
   margin: 0;
-  overflow: auto;
   padding: 0;
   width: 100%;
-  position: fixed;
-  left: 0;
-  top: 0;
 }
 
 .mdl-number-select-input-cancel {
